# wctype_prototype

./: CMakeLists.txt  README.md  generator.h  main.cpp  test_wctype.cpp
benchmarks/: CMakeLists.txt  benchmarks.md  classification_benchmark.cpp  towlower_benchmark.cpp  towupper_benchmark.cpp
rfc/: draft.md
src/: CMakeLists.txt  conversion_generator.h  generator.cpp  generator.h  ht.h  mywctype.h  staged_conversion_generator.h  test_size.cpp  wctype_tables.cpp
src/v8/: v8_unicode.h
tests/: CMakeLists.txt  iswcntrl_test.cpp  iswctype_test.cpp  iswprint_test.cpp  iswupper_test.cpp  towlower_test.cpp  towupper_test.cpp
